--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,19 @@
 name: ci
 
-on: pull_request
+on:
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Node
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
 
-    - name: Install dependencies
-      run: yarn
-
+      - name: Install dependencies
+        run: yarn
     # - name: Check linting
     #   run: yarn lint
