--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Node
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
 
-    - name: Install dependencies
-      run: yarn install
+      - name: Install dependencies
+        run: yarn install
 
-    - name: Check tests
-      run: yarn test
+      - name: Check tests
+        run: yarn test --coverage
