--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
         run: yarn install
 
       - name: Check tests
-        run: yarn test --coverage
+        run: yarn run test -o --watch
