--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
         run: yarn install
 
       - name: Check tests
-        run: yarn jest "src/tests"
+        run: yarn run jest "src/tests"
