--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Node
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Setup node
         uses: actions/setup-node@v1
         with:
           node-version: 12
