--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     }
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.18.2",
@@ -27,8 +26,12 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.4",
     "sequelize-cli": "^5.5.1",
     "sucrase": "^3.12.1",
     "supertest": "^4.0.2"
