--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   web:
     build: .
-    command: yarn dev
+    command: npm run dev
     volumes:
       - .:/usr/app/
       - /usr/app/node_modules
