--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server",
+    "start:dev": "nodemon src/server",
+    "start:prod": "node dist/server",
     "build": "babel src -s -D -d dist",
-    "start": "node dist/server",
     "test": "jest src/tests"
   },
   "jest": {
@@ -15,10 +15,11 @@
     }
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.7"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
@@ -26,13 +27,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
-    "prettier": "^2.0.4",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.5.4",
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.5",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1",
+    "sucrase": "^3.13.0",
     "supertest": "^4.0.2"
   }
 }
